apps/istio-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: platform-routing
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/platform-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80

  - match:
    - uri:
        prefix: /grafana
    rewrite:
      uri: /
    route:
    - destination:
        host: monitoring-grafana.monitoring.svc.cluster.local
        port:
          number: 80

  - match:
    - uri:
        prefix: /nexus
    rewrite:
      uri: /
    route:
    - destination:
        host: nexus.nexus.svc.cluster.local
        port:
          number: 80
